--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,6 +7,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@types/youtube": "^0.0.50",
 		"preact": "^10.18.2",
 		"preact-render-to-string": "^6.2.2"
 	},
@@ -14,6 +15,11 @@
 		"@preact/preset-vite": "^2.6.0",
 		"typescript": "^5.2.2",
 		"vike": "^0.4.144",
-		"vite": "^4.5.0"
+		"vite": "^4.5.0",
+		"backend": "workspace:*",
+		"@types/youtube-player": "^5.5.10",
+		"fast-deep-equal": "3.1.3",
+		"prop-types": "15.8.1",
+		"youtube-player": "5.6.0"
 	}
 }
