--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -7,7 +7,8 @@
 		"allowJs": true,
 		"checkJs": true,
 		"jsx": "react-jsx",
-		"jsxImportSource": "preact"
+		"jsxImportSource": "preact",
+		"types": ["../../types.d.ts", "youtube", "vite/client"],
 	},
 	"include": ["node_modules/vite/client.d.ts", "**/*"]
 }
