--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,26 @@
 name: Deploy
 
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v1
-      - name: Install dependencies
-        run: bun i
-      - name: Set git token
-        run: git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-      - name: Deploy
-        run: bun run deploy
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: oven-sh/setup-bun@v1
+            - name: Install dependencies
+              run: bun i
+            - shell: bash
+              env:
+                  GIT_NAME: ${{ secrets.GITNAME }}
+                  GIT_EMAIL: ${{ secrets.GITEMAIL }}
+              run: |
+                  git config --global user.name "$GIT_NAME"
+                  git config --global user.email "$GIT_EMAIL"
+            - name: Set git token
+              run: git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+            - name: Deploy
+              run: bun run deploy
